# CProjects

./: .gitignore  CMakeLists.txt
hexdump/: CMakeLists.txt
hexdump/hexdump/: CMakeLists.txt  dynarray.c  dynarray.h  hexdump.c
hexdump/hexdump/test/: hello_world.txt
matrix_rain/: CMakeLists.txt  rain.c  randstr.c  randstr.h
